--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
 
-    <title>My Portfolio Website</title>
+    <title>Deepak</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
